--- a/src/main/webapp/decorators/advertisementDecorator.xhtml
+++ b/src/main/webapp/decorators/advertisementDecorator.xhtml
@@ -35,11 +35,11 @@ Environmental damage caused by the use must be kept as small as possible.
                             icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
                 <p:menuitem styleClass="#{advertisement.activeMenuBrowse('offer')}" value="Angebote"
-                            url="/internal/advertisements/browse.xhtml?type=offer"
+                            url="/internal/advertisements/browse.xhtml?type=offer&amp;category=root"
                             icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
                 <p:menuitem styleClass="#{advertisement.activeMenuBrowse('request')}" value="Gesuche"
-                            url="/internal/advertisements/browse.xhtml?type=request"
+                            url="/internal/advertisements/browse.xhtml?type=request&amp;category=root"
                             icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
             </p:menu>
 
