--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -39,7 +39,7 @@ Environmental damage caused by the use must be kept as small as possible.
                                 icon="ui-icon-person" rendered="#{userSession.notLoggedIn}"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/advertisements/')}" value="Anzeigen"
-                                url="/internal/advertisements/browse.xhtml?type=offer&amp;categorie=root"
+                                url="/internal/advertisements/browse.xhtml?type=offer&amp;category=root"
                                 icon="ui-icon-star" rendered="#{userSession.loggedIn}"/>
 
                     <p:menuitem styleClass="#{userSession.activeMenu('internal/members')}" value="Mitglieder"
