bigger avatar in advertisements

--- a/src/main/webapp/internal/advertisements/browse.xhtml
+++ b/src/main/webapp/internal/advertisements/browse.xhtml
@@ -45,7 +45,8 @@ Environmental damage caused by the use must be kept as small as possible.
                     <h:outputText value="User:"/>
                     <h:panelGroup>
                         <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{adToShow.owner.id}">
-                            <img src="#{adToShow.owner.gravatarUrl30}" alt="avatar #{adToShow.owner.displayName}"/>
+                            <img src="#{adToShow.owner.gravatarHeaderUrl49}"
+                                 alt="avatar #{adToShow.owner.displayName}"/>
                             <h:outputText value="#{adToShow.owner.id}"/>
                         </a>
                     </h:panelGroup>
