--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -46,7 +46,7 @@ Environmental damage caused by the use must be kept as small as possible.
 <h:body>
     <div class="header">
         <div class="container">
-
+            <p:growl id="messages"/>
             <a href="${pageContext.request.servletPath}/dashboard.xhtml">
                 <h:graphicImage name="/img/logoGreen.png" alt="logo" styleClass="headerLogo"/><span id="headLine">Tauschring
                 <span class="green">Hamburg</span></span>
