--- a/src/main/webapp/internal/transaction.xhtml
+++ b/src/main/webapp/internal/transaction.xhtml
@@ -41,7 +41,7 @@ Environmental damage caused by the use must be kept as small as possible.
                                      panelStyle="width:150px"
                                      effect="fade" var="p" style="width:260px" filter="true"
                                      filterMatchMode="startsWith">
-                        <f:selectItem itemLabel="Select One" itemValue=""/>
+                        <f:selectItem itemLabel="Bitte wählen" itemValue=""/>
                         <f:selectItems value="#{user.otherUsers}" var="potentialReceiver"
                                        itemLabel="#{potentialReceiver.id}"
                                        itemValue="#{potentialReceiver}"/>
