--- a/src/main/webapp/internal/members/members.xhtml
+++ b/src/main/webapp/internal/members/members.xhtml
@@ -29,50 +29,46 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="contentWithoutMenu">
         <p:panel header="Mitglieder">
-            <p:scrollPanel style="height: 800px;">
-                <p:dataTable id="memberTable" var="member" value="#{user.members}"
-                             styleClass="ui-corner-all">
-                    <p:column id="memberId" sortBy="#{member.id}">
-                        <f:facet name="header">
-                            <h:outputText value="ID"/>
-                        </f:facet>
-                        <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{member.id}">
-                            <img src="#{member.gravatarUrl30}" alt="avatar #{member.displayName}"/>
-                            <h:outputText value="#{member.id}"/>
-                        </a>
-                    </p:column>
-                    <p:column id="other" sortBy="#{member.displayName}">
-                        <f:facet name="header">
-                            <h:outputText value="Name"/>
-                        </f:facet>
-                        <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{member.id}">
-                            <h:outputText value="#{member.displayName}"/>
-                        </a>
-                    </p:column>
-                    <p:column id="motten" sortBy="#{member.balance}">
-                        <f:facet name="header">
-                            <h:outputText value="Motten"/>
-                        </f:facet>
-                        <h:outputText value="#{member.balance}"/>
-                    </p:column>
-                    <p:column id="email" sortBy="#{member.visibleEmail}">
-                        <f:facet name="header">
-                            <h:outputText value="Email"/>
-                        </f:facet>
-                        <a href="mailto:#{member.visibleEmail}">
-                            <h:outputText value="#{member.visibleEmail}"/>
-                        </a>
-                    </p:column>
-                    <p:column id="dummy" sortBy="#{member.visibleEmail}">
-                        <f:facet name="header">
-                            <h:outputText
-                                    value="Hier kommt ein sehr langer Text, damit ich horizontales scrolling sehen kann, mal schauen was kommt. Ich bin gespannt"/>
-                        </f:facet>
-                        <h:outputText
-                                value="Hier kommt ein sehr langer Text, damit ich horizontales scrolling sehen kann, mal schauen was kommt. Ich bin gespannt - ok es wurde ein Zeilenumbruch"/>
-                    </p:column>
-                </p:dataTable>
-            </p:scrollPanel>
+            <p:dataTable id="memberTable" var="member" value="#{user.members}"
+                         styleClass="ui-corner-all">
+                <p:column id="memberId" sortBy="#{member.id}">
+                    <f:facet name="header">
+                        <h:outputText value="ID"/>
+                    </f:facet>
+                    <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{member.id}">
+                        <img src="#{member.gravatarHeaderUrl49}" alt="avatar #{member.displayName}"/>
+                        <h:outputText value="#{member.id}"/>
+                    </a>
+                </p:column>
+                <p:column id="other" sortBy="#{member.displayName}">
+                    <f:facet name="header">
+                        <h:outputText value="Name"/>
+                    </f:facet>
+                    <a href="${pageContext.request.servletPath}/internal/members/user.xhtml?userId=#{member.id}">
+                        <h:outputText value="#{member.displayName}"/>
+                    </a>
+                </p:column>
+                <p:column id="motten" sortBy="#{member.balance}">
+                    <f:facet name="header">
+                        <h:outputText value="Motten"/>
+                    </f:facet>
+                    <h:outputText value="#{member.balance}"/>
+                </p:column>
+                <p:column id="email" sortBy="#{member.visibleEmail}">
+                    <f:facet name="header">
+                        <h:outputText value="Email"/>
+                    </f:facet>
+                    <a href="mailto:#{member.visibleEmail}">
+                        <h:outputText value="#{member.visibleEmail}"/>
+                    </a>
+                </p:column>
+                <p:column id="profile" sortBy="#{member.profile}">
+                    <f:facet name="header">
+                        <h:outputText value="Profil"/>
+                    </f:facet>
+                    <h:outputText value="#{member.profile}"/>
+                </p:column>
+            </p:dataTable>
         </p:panel>
     </ui:define>
 </ui:composition>
